Build error bug fix